Enable responsive voice script in index.html

--- a/client/ui/index.html
+++ b/client/ui/index.html
@@ -107,6 +107,6 @@
     <script src="js/ScanManager.js"></script>
     <script src="js/script.js"></script>
     <script src="js/ui.js"></script>
-    <!-- <script src="https://code.responsivevoice.org/responsivevoice.js?key=PekkZld1"></script> -->
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key=PekkZld1"></script>
 </body>
 </html>
